deployment/vault-springboot-mssql-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vault-springboot-mssql-agent
  name: vault-springboot-mssql-agent
  namespace: vault-springboot-rotation-test
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 80 
    protocol: TCP
    targetPort: 8080
  selector:
    app: vault-springboot-mssql-agent
  sessionAffinity: None
status:
  loadBalancer: {}
