deployment/vault-springboot-mssql-agent-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: vault-springboot-mssql-agent
  name: vault-springboot-mssql-agent
  namespace: vault-springboot-rotation-test
spec:
  host: vault-springboot-mssql-agent.apps.ocp.resolve.local
  port:
    targetPort: web
  to:
    kind: Service
    name: vault-springboot-mssql-agent 
    weight: 100
  wildcardPolicy: None
